<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/favorite"
        android:icon="@drawable/ic_grade_24px"
        android:title="@string/favorite"
        android:visible="false"
        android:contentDescription="@string/favorite_description"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/sound_on"
        android:icon="@drawable/ic_volume_up_24px"
        android:title="@string/sound_on"
        android:visible="false"
        android:contentDescription="@string/sound_on_description"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/sound_off"
        android:icon="@drawable/ic_volume_off_24px"
        android:title="@string/sound_off"
        android:visible="false"
        android:contentDescription="@string/sound_off_description"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings_24px"
        android:title="@string/settings"
        android:visible="false"
        android:contentDescription="@string/settings"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/start"
        android:icon="@drawable/ic_add_24px"
        android:title="@string/create_timer"
        android:visible="false"
        android:contentDescription="@string/create_timer"
        app:showAsAction="ifRoom"/>
</menu>