<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/drawer_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home_24px"
            android:title="@string/home"/>
        <item
            android:id="@+id/createTimer"
            android:icon="@drawable/ic_timer_24px"
            android:title="@string/create_timer" />
        <item
            android:id="@+id/favorites"
            android:icon="@drawable/ic_grade_24px"
            android:title="@string/favorites" />
        <item
            android:id="@+id/recents"
            android:icon="@drawable/ic_history_24px"
            android:title="@string/recents"/>
    </group>

    <group
        android:id="@+id/drawer_settings"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_24px"
            android:title="@string/settings" />
        <item
            android:id="@+id/aboutFragment"
            android:icon="@drawable/ic_info_24px"
            android:title="@string/about"/>
    </group>
</menu>