<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/home_fragment">

    <fragment
        android:id="@+id/timer_fragment"
        android:name="com.timmytruong.materialintervaltimer.ui.timer.TimerFragment"
        android:label="@string/timer">
        <argument
            android:name="timer_id"
            app:argType="integer"
            android:defaultValue="-1" />
        <action
            android:id="@+id/to_home"
            app:destination="@id/home_fragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/home_fragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/home_fragment"
        android:name="com.timmytruong.materialintervaltimer.ui.home.HomeFragment"
        android:label="@string/home">
        <action
            android:id="@+id/to_action_bottom_sheet"
            app:destination="@id/timer_action_bottom_sheet"/>
        <action
            android:id="@+id/to_create_timer"
            app:destination="@id/create_timer_fragment"
            app:launchSingleTop="true"/>
        <action
            android:id="@+id/to_timer_list"
            app:destination="@id/timer_list_fragment" />
    </fragment>

    <dialog
        android:id="@+id/timer_action_bottom_sheet"
        android:name="com.timmytruong.materialintervaltimer.ui.reusable.action.TimerActionBottomSheet"
        android:label="TimerActionBottomSheet" >
        <argument
            android:name="favorited"
            android:defaultValue="false"
            app:argType="boolean"/>
        <argument
            android:name="timer_id"
            android:defaultValue="-1"
            app:argType="integer"/>
        <action
            android:id="@+id/to_timer"
            app:destination="@id/timer_fragment" />
    </dialog>

    <fragment
        android:id="@+id/create_interval_time_fragment"
        android:name="com.timmytruong.materialintervaltimer.ui.create.interval.time.CreateIntervalTimeFragment"
        android:label="@string/create_interval">
        <action
            android:id="@+id/to_create_timer"
            app:destination="@id/create_timer_fragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/create_timer_fragment"
            app:popUpToInclusive="true"/>
        <action
            android:id="@+id/to_create_interval"
            app:destination="@id/create_interval_fragment"
            app:popUpTo="@id/create_interval_fragment"
            app:popUpToInclusive="true"/>
    </fragment>

    <fragment
        android:id="@+id/create_timer_fragment"
        android:name="com.timmytruong.materialintervaltimer.ui.create.timer.CreateTimerFragment"
        android:label="@string/create_timer">
        <argument
            android:name="clear_view_model"
            android:defaultValue="true"
            app:argType="boolean" />
        <action
            android:id="@+id/to_create_interval"
            app:destination="@id/create_interval_fragment" />
        <action
            android:id="@+id/to_sounds"
            app:destination="@id/interval_sounds_bottom_sheet" />
        <action
            android:id="@+id/to_home"
            app:destination="@id/home_fragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/main_nav_graph"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/to_timer"
            app:destination="@id/timer_fragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/home_fragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/create_interval_fragment"
        android:name="com.timmytruong.materialintervaltimer.ui.create.interval.CreateIntervalFragment"
        android:label="@string/create_interval">
        <argument
            android:name="clear_stores"
            android:defaultValue="true"
            app:argType="boolean" />
        <action
            android:id="@+id/to_time"
            app:destination="@id/create_interval_time_fragment"/>
    </fragment>

    <dialog
        android:id="@+id/interval_sounds_bottom_sheet"
        android:name="com.timmytruong.materialintervaltimer.ui.create.timer.sounds.IntervalSoundsBottomSheet"
        android:label="IntervalSoundsBottomSheet" >
        <argument
            android:name="soundId"
            android:defaultValue="-1"
            app:argType="integer"/>
    </dialog>

    <fragment
        android:id="@+id/timer_list_fragment"
        android:name="com.timmytruong.materialintervaltimer.ui.list.TimerListFragment">
        <argument
            android:name="type"
            app:argType="com.timmytruong.materialintervaltimer.ui.reusable.type.TimerType"/>
        <action
            android:id="@+id/to_action_bottom_sheet"
            app:destination="@id/timer_action_bottom_sheet" />
    </fragment>
</navigation>